--- a/main.lfm
+++ b/main.lfm
@@ -277,112 +277,111 @@ object Form1: TForm1
           AnchorSideRight.Control = btnAddLight
           AnchorSideRight.Side = asrBottom
           Left = 24
-          Height = 113
+          Height = 90
           Top = 80
           Width = 284
           Anchors = [akTop, akLeft, akRight]
           AutoSize = True
           Caption = 'Position'
-          ClientHeight = 93
+          ClientHeight = 70
           ClientWidth = 280
           TabOrder = 2
-          object seLightPosX: TFloatSpinEdit
-            AnchorSideLeft.Control = lblHorRot1
-            AnchorSideLeft.Side = asrBottom
+          object seLightPolarAngle: TFloatSpinEdit
+            AnchorSideLeft.Control = seLightAzimuthalAngle
             AnchorSideTop.Control = gbLightPos
-            AnchorSideRight.Control = gbLightPos
-            AnchorSideRight.Side = asrBottom
-            Left = 66
+            AnchorSideRight.Control = Label4
+            Left = 110
             Height = 23
             Top = 4
-            Width = 166
+            Width = 94
+            Alignment = taRightJustify
             Anchors = [akTop, akLeft, akRight]
-            BorderSpacing.Left = 12
             BorderSpacing.Top = 4
-            BorderSpacing.Right = 48
-            MaxValue = 9999
-            MinValue = 0
+            MaxValue = 90
+            MinValue = -90
             OnChange = LightChanged
             TabOrder = 0
             Value = 0
           end
-          object lblHorRot1: TLabel
+          object lblLightPolarAngle: TLabel
             AnchorSideLeft.Control = gbLightPos
-            AnchorSideTop.Control = seLightPosX
+            AnchorSideTop.Control = seLightPolarAngle
             AnchorSideTop.Side = asrCenter
             Left = 48
             Height = 15
             Top = 8
-            Width = 6
+            Width = 43
             BorderSpacing.Left = 48
-            Caption = 'x'
+            Caption = 'Latitude'
             ParentColor = False
           end
-          object lblHorRot2: TLabel
+          object lblLightAzimuthalAngle: TLabel
             AnchorSideLeft.Control = gbLightPos
-            AnchorSideTop.Control = seLightPosY
+            AnchorSideTop.Control = seLightAzimuthalAngle
             AnchorSideTop.Side = asrCenter
             Left = 48
             Height = 15
             Top = 35
-            Width = 6
+            Width = 54
             BorderSpacing.Left = 48
-            Caption = 'y'
+            Caption = 'Longitude'
             ParentColor = False
           end
-          object seLightPosY: TFloatSpinEdit
-            AnchorSideLeft.Control = lblHorRot2
+          object seLightAzimuthalAngle: TFloatSpinEdit
+            AnchorSideLeft.Control = lblLightAzimuthalAngle
             AnchorSideLeft.Side = asrBottom
-            AnchorSideTop.Control = seLightPosX
+            AnchorSideTop.Control = seLightPolarAngle
             AnchorSideTop.Side = asrBottom
-            AnchorSideRight.Control = gbLightPos
+            AnchorSideRight.Control = seLightPolarAngle
             AnchorSideRight.Side = asrBottom
-            Left = 66
+            Left = 110
             Height = 23
             Top = 31
-            Width = 166
+            Width = 94
+            Alignment = taRightJustify
             Anchors = [akTop, akLeft, akRight]
-            BorderSpacing.Left = 12
+            BorderSpacing.Left = 8
             BorderSpacing.Top = 4
-            BorderSpacing.Right = 48
-            MaxValue = 9999
+            BorderSpacing.Bottom = 16
+            MaxValue = 360
             MinValue = 0
             OnChange = LightChanged
             TabOrder = 1
             Value = 0
           end
-          object seLightPosZ: TFloatSpinEdit
-            AnchorSideLeft.Control = lblHorRot3
+          object Label4: TLabel
+            AnchorSideLeft.Control = seLightPolarAngle
             AnchorSideLeft.Side = asrBottom
-            AnchorSideTop.Control = seLightPosY
-            AnchorSideTop.Side = asrBottom
+            AnchorSideTop.Control = seLightPolarAngle
+            AnchorSideTop.Side = asrCenter
             AnchorSideRight.Control = gbLightPos
             AnchorSideRight.Side = asrBottom
-            Left = 65
-            Height = 23
-            Top = 58
-            Width = 167
-            Anchors = [akTop, akLeft, akRight]
-            BorderSpacing.Left = 12
-            BorderSpacing.Top = 4
-            BorderSpacing.Right = 48
-            BorderSpacing.Bottom = 12
-            MaxValue = 9999
-            MinValue = 0
-            OnChange = LightChanged
-            TabOrder = 2
-            Value = 0
-          end
-          object lblHorRot3: TLabel
-            AnchorSideLeft.Control = gbLightPos
-            AnchorSideTop.Control = seLightPosZ
-            AnchorSideTop.Side = asrCenter
-            Left = 48
+            Left = 212
             Height = 15
-            Top = 62
-            Width = 5
-            BorderSpacing.Left = 48
-            Caption = 'z'
+            Top = 8
+            Width = 20
+            Anchors = [akTop, akRight]
+            BorderSpacing.Left = 8
+            BorderSpacing.Right = 48
+            Caption = 'deg'
+            ParentColor = False
+          end
+          object Label5: TLabel
+            AnchorSideLeft.Control = seLightPolarAngle
+            AnchorSideLeft.Side = asrBottom
+            AnchorSideTop.Control = seLightAzimuthalAngle
+            AnchorSideTop.Side = asrCenter
+            AnchorSideRight.Control = gbLightPos
+            AnchorSideRight.Side = asrBottom
+            Left = 212
+            Height = 15
+            Top = 35
+            Width = 20
+            Alignment = taRightJustify
+            Anchors = [akTop, akRight]
+            BorderSpacing.Left = 8
+            BorderSpacing.Right = 48
+            Caption = 'deg'
             ParentColor = False
           end
         end
@@ -393,14 +392,14 @@ object Form1: TForm1
           AnchorSideRight.Control = gbLightPos
           AnchorSideRight.Side = asrBottom
           Left = 24
-          Height = 123
-          Top = 205
+          Height = 127
+          Top = 182
           Width = 284
           Anchors = [akTop, akLeft, akRight]
           AutoSize = True
           BorderSpacing.Top = 12
           Caption = 'Light color'
-          ClientHeight = 103
+          ClientHeight = 107
           ClientWidth = 280
           TabOrder = 3
           object clbAmbientLightColor: TColorButton
@@ -449,7 +448,7 @@ object Form1: TForm1
             Top = 66
             Width = 118
             BorderSpacing.Top = 6
-            BorderSpacing.Bottom = 12
+            BorderSpacing.Bottom = 16
             BorderWidth = 2
             ButtonColorAutoSize = False
             ButtonColorSize = 16
@@ -730,16 +729,17 @@ object Form1: TForm1
         ClientHeight = 472
         ClientWidth = 332
         object cmbSeriesList: TComboBox
-          AnchorSideLeft.Control = pgSeries
+          AnchorSideLeft.Control = Label6
+          AnchorSideLeft.Side = asrBottom
           AnchorSideTop.Control = pgSeries
           AnchorSideRight.Control = pgSeries
           AnchorSideRight.Side = asrBottom
-          Left = 24
+          Left = 93
           Height = 23
           Top = 12
-          Width = 284
+          Width = 215
           Anchors = [akTop, akLeft, akRight]
-          BorderSpacing.Left = 24
+          BorderSpacing.Left = 6
           BorderSpacing.Top = 12
           BorderSpacing.Right = 24
           ItemHeight = 15
@@ -748,7 +748,7 @@ object Form1: TForm1
           TabOrder = 0
         end
         object nbSeries: TNotebook
-          AnchorSideLeft.Control = cmbSeriesList
+          AnchorSideLeft.Control = cbSeriesActive
           AnchorSideTop.Control = Bevel3
           AnchorSideTop.Side = asrBottom
           AnchorSideRight.Control = cmbSeriesList
@@ -759,7 +759,7 @@ object Form1: TForm1
           Height = 380
           Top = 80
           Width = 284
-          PageIndex = 0
+          PageIndex = 2
           Anchors = [akTop, akLeft, akRight, akBottom]
           BorderSpacing.Bottom = 12
           TabOrder = 1
@@ -989,11 +989,11 @@ object Form1: TForm1
           object pgFuncSeries: TPage
             object cbFuncUseColorPalette: TCheckBox
               AnchorSideLeft.Control = gbY
-              AnchorSideTop.Control = gbY
+              AnchorSideTop.Control = lblFuncDrawMode
               AnchorSideTop.Side = asrBottom
               Left = 0
               Height = 19
-              Top = 190
+              Top = 217
               Width = 108
               BorderSpacing.Top = 16
               Caption = 'Use color palette'
@@ -1012,8 +1012,8 @@ object Form1: TForm1
               Anchors = [akTop, akLeft, akRight]
               AutoSize = True
               Caption = 'x'
-              ClientHeight = 84
-              ClientWidth = 284
+              ClientHeight = 64
+              ClientWidth = 280
               TabOrder = 1
               object lblFuncXMin: TLabel
                 AnchorSideLeft.Control = lblFuncXCount
@@ -1116,8 +1116,8 @@ object Form1: TForm1
               AutoSize = True
               BorderSpacing.Top = 6
               Caption = 'y'
-              ClientHeight = 84
-              ClientWidth = 284
+              ClientHeight = 64
+              ClientWidth = 280
               TabOrder = 2
               object lblFuncYMin: TLabel
                 AnchorSideLeft.Control = lblFuncYCount
@@ -1215,7 +1215,7 @@ object Form1: TForm1
               AnchorSideRight.Side = asrBottom
               Left = 124
               Height = 25
-              Top = 187
+              Top = 214
               Width = 160
               Anchors = [akTop, akLeft, akRight]
               BorderSpacing.Left = 16
@@ -1236,8 +1236,8 @@ object Form1: TForm1
               AnchorSideBottom.Control = pgFuncSeries
               AnchorSideBottom.Side = asrBottom
               Left = 0
-              Height = 159
-              Top = 221
+              Height = 132
+              Top = 248
               Width = 284
               Anchors = [akTop, akLeft, akRight, akBottom]
               BorderSpacing.Top = 12
@@ -1264,10 +1264,62 @@ object Form1: TForm1
                 155
               )
             end
+            object lblFuncDrawMode: TLabel
+              AnchorSideLeft.Control = gbY
+              AnchorSideTop.Control = gbY
+              AnchorSideTop.Side = asrBottom
+              Left = 0
+              Height = 15
+              Top = 186
+              Width = 31
+              BorderSpacing.Top = 12
+              Caption = 'Mode'
+              ParentColor = False
+            end
+            object cmbFuncDrawMode: TComboBox
+              AnchorSideLeft.Control = lblFuncDrawMode
+              AnchorSideLeft.Side = asrBottom
+              Left = 47
+              Height = 23
+              Top = 183
+              Width = 121
+              BorderSpacing.Left = 16
+              ItemHeight = 15
+              ItemIndex = 0
+              Items.Strings = (
+                'Filled'
+                'Wire frame'
+                'Filled + wire frame'
+              )
+              OnChange = FuncSeriesChanged
+              Style = csDropDownList
+              TabOrder = 4
+              Text = 'Filled'
+            end
+            object clbWireFrameLineColor: TColorButton
+              AnchorSideLeft.Control = cmbFuncDrawMode
+              AnchorSideLeft.Side = asrBottom
+              AnchorSideRight.Control = gbY
+              AnchorSideRight.Side = asrBottom
+              Left = 174
+              Height = 25
+              Top = 181
+              Width = 110
+              Anchors = [akTop, akLeft, akRight]
+              BorderSpacing.Left = 6
+              BorderWidth = 2
+              ButtonColorAutoSize = False
+              ButtonColorSize = 16
+              ButtonColor = clBlack
+              Caption = 'Wire frame'
+              Margin = 4
+              Visible = False
+              OnColorChanged = FuncSeriesChanged
+            end
           end
         end
         object cbSeriesActive: TCheckBox
-          AnchorSideLeft.Control = cmbSeriesList
+          AnchorSideLeft.Control = Label6
           AnchorSideTop.Control = cmbSeriesList
           AnchorSideTop.Side = asrBottom
           Left = 24
@@ -1294,6 +1346,16 @@ object Form1: TForm1
           Anchors = [akTop, akLeft, akRight]
           BorderSpacing.Around = 8
           Shape = bsTopLine
+        end
+        object Label6: TLabel
+          AnchorSideLeft.Control = pgSeries
+          Left = 24
+          Height = 15
+          Top = 16
+          Width = 63
+          BorderSpacing.Left = 24
+          Caption = 'Select series'
+          ParentColor = False
         end
       end
       object pgMisc: TTabSheet
