--- a/main.lfm
+++ b/main.lfm
@@ -23,9 +23,9 @@ object Form1: TForm1
       Height = 500
       Top = 0
       Width = 340
-      ActivePage = pgSeries
+      ActivePage = pgViewParams
       Align = alClient
-      TabIndex = 4
+      TabIndex = 0
       TabOrder = 0
       object pgViewParams: TTabSheet
         Caption = 'View'
@@ -201,6 +201,19 @@ object Form1: TForm1
           Anchors = [akTop, akLeft, akRight]
           BorderSpacing.Around = 8
           Shape = bsTopLine
+        end
+        object cbViewRefersToData: TCheckBox
+          AnchorSideLeft.Control = cbViewInteractive
+          AnchorSideLeft.Side = asrBottom
+          AnchorSideTop.Control = cbViewInteractive
+          AnchorSideTop.Side = asrCenter
+          Left = 115
+          Height = 19
+          Top = 12
+          Width = 92
+          BorderSpacing.Left = 16
+          Caption = 'Refers to data'
+          TabOrder = 3
         end
       end
       object pgLights: TTabSheet
