--- a/main.lfm
+++ b/main.lfm
@@ -23,9 +23,9 @@ object Form1: TForm1
       Height = 500
       Top = 0
       Width = 340
-      ActivePage = pgViewParams
+      ActivePage = pgMisc
       Align = alClient
-      TabIndex = 0
+      TabIndex = 5
       TabOrder = 0
       object pgViewParams: TTabSheet
         Caption = 'View'
@@ -662,21 +662,21 @@ object Form1: TForm1
       object pgAxes: TTabSheet
         Caption = 'Axes'
         ClientHeight = 472
-        ClientWidth = 322
+        ClientWidth = 332
         object gbAxisLine: TGroupBox
           AnchorSideLeft.Control = pgAxes
           AnchorSideRight.Control = pgAxes
           AnchorSideRight.Side = asrBottom
           Left = 24
           Height = 105
-          Top = 75
-          Width = 274
+          Top = 48
+          Width = 284
           Anchors = [akTop, akLeft, akRight]
           BorderSpacing.Left = 24
           BorderSpacing.Right = 24
           Caption = 'Axis line'
           ClientHeight = 85
-          ClientWidth = 270
+          ClientWidth = 280
           TabOrder = 0
           object cbAxisLineVisible: TCheckBox
             AnchorSideLeft.Control = gbAxisLine
@@ -713,7 +713,7 @@ object Form1: TForm1
         object cmbAxisKind: TComboBox
           Left = 8
           Height = 23
-          Top = 10
+          Top = 8
           Width = 144
           ItemHeight = 15
           ItemIndex = 0
@@ -735,6 +735,252 @@ object Form1: TForm1
           Caption = 'Visible'
           OnChange = AxisChanged
           TabOrder = 2
+        end
+        object gbAxisLabels: TGroupBox
+          AnchorSideLeft.Control = gbAxisLine
+          AnchorSideRight.Control = gbAxisLine
+          AnchorSideRight.Side = asrBottom
+          Left = 24
+          Height = 120
+          Top = 328
+          Width = 284
+          Anchors = [akTop, akLeft, akRight]
+          Caption = 'Axis labels'
+          ClientHeight = 100
+          ClientWidth = 280
+          TabOrder = 3
+          object cmbAxisLabelFontName: TComboBox
+            AnchorSideLeft.Control = Label7
+            AnchorSideLeft.Side = asrBottom
+            AnchorSideTop.Control = cbAxisLabelsVisible
+            AnchorSideTop.Side = asrBottom
+            AnchorSideRight.Control = cmbAxisLabelFontSize
+            Left = 54
+            Height = 23
+            Top = 29
+            Width = 126
+            Anchors = [akTop, akLeft, akRight]
+            BorderSpacing.Left = 18
+            BorderSpacing.Top = 6
+            BorderSpacing.Right = 4
+            ItemHeight = 15
+            OnChange = AxisChanged
+            Style = csDropDownList
+            TabOrder = 0
+          end
+          object Label7: TLabel
+            AnchorSideLeft.Control = gbAxisLabels
+            AnchorSideTop.Control = cmbAxisLabelFontName
+            AnchorSideTop.Side = asrCenter
+            Left = 12
+            Height = 15
+            Top = 33
+            Width = 24
+            BorderSpacing.Left = 12
+            Caption = 'Font'
+            ParentColor = False
+          end
+          object cmbAxisLabelFontSize: TComboBox
+            AnchorSideTop.Control = cmbAxisLabelFontName
+            AnchorSideTop.Side = asrCenter
+            AnchorSideRight.Control = clbAxisLabelFontColor
+            Left = 184
+            Height = 23
+            Top = 29
+            Width = 52
+            Anchors = [akTop, akRight]
+            BorderSpacing.Right = 4
+            ItemHeight = 15
+            ItemIndex = 3
+            Items.Strings = (
+              '6'
+              '8'
+              '10'
+              '12'
+              '14'
+              '16'
+              '18'
+              '20'
+              '24'
+              '28'
+              '32'
+              '36'
+              '40'
+              '48'
+            )
+            OnChange = AxisChanged
+            TabOrder = 1
+            Text = '12'
+          end
+          object clbAxisLabelFontColor: TColorButton
+            AnchorSideTop.Control = cmbAxisLabelFontName
+            AnchorSideTop.Side = asrCenter
+            AnchorSideRight.Control = gbAxisLabels
+            AnchorSideRight.Side = asrBottom
+            Left = 240
+            Height = 25
+            Top = 28
+            Width = 28
+            Anchors = [akTop, akLeft, akRight]
+            BorderSpacing.Right = 12
+            BorderWidth = 2
+            ButtonColorSize = 16
+            ButtonColor = clBlack
+            OnColorChanged = AxisChanged
+          end
+          object cbAxisLabelsVisible: TCheckBox
+            AnchorSideLeft.Control = gbAxisLabels
+            AnchorSideTop.Control = gbAxisLabels
+            Left = 12
+            Height = 19
+            Top = 4
+            Width = 54
+            BorderSpacing.Left = 12
+            BorderSpacing.Top = 4
+            Caption = 'Visible'
+            Checked = True
+            OnChange = AxisChanged
+            State = cbChecked
+            TabOrder = 2
+          end
+        end
+        object gbAxisTitle: TGroupBox
+          AnchorSideLeft.Control = gbAxisLine
+          AnchorSideRight.Control = gbAxisLine
+          AnchorSideRight.Side = asrBottom
+          Left = 24
+          Height = 115
+          Top = 168
+          Width = 284
+          Anchors = [akTop, akLeft, akRight]
+          AutoSize = True
+          Caption = 'Axis title'
+          ClientHeight = 95
+          ClientWidth = 280
+          TabOrder = 4
+          object cmbAxisTitleFontName: TComboBox
+            AnchorSideLeft.Control = edAxisTitleText
+            AnchorSideTop.Control = edAxisTitleText
+            AnchorSideTop.Side = asrBottom
+            AnchorSideRight.Control = cmbAxisTitleFontSize
+            Left = 54
+            Height = 23
+            Top = 60
+            Width = 126
+            Anchors = [akTop, akLeft, akRight]
+            BorderSpacing.Top = 8
+            BorderSpacing.Right = 4
+            BorderSpacing.Bottom = 12
+            ItemHeight = 15
+            OnChange = AxisChanged
+            Style = csDropDownList
+            TabOrder = 0
+          end
+          object Label8: TLabel
+            AnchorSideLeft.Control = gbAxisTitle
+            AnchorSideTop.Control = cmbAxisTitleFontName
+            AnchorSideTop.Side = asrCenter
+            Left = 12
+            Height = 15
+            Top = 64
+            Width = 24
+            BorderSpacing.Left = 12
+            Caption = 'Font'
+            ParentColor = False
+          end
+          object cmbAxisTitleFontSize: TComboBox
+            AnchorSideTop.Control = cmbAxisTitleFontName
+            AnchorSideTop.Side = asrCenter
+            AnchorSideRight.Control = clbAxisTitleFontColor
+            Left = 184
+            Height = 23
+            Top = 60
+            Width = 52
+            Anchors = [akTop, akRight]
+            BorderSpacing.Right = 4
+            ItemHeight = 15
+            ItemIndex = 3
+            Items.Strings = (
+              '6'
+              '8'
+              '10'
+              '12'
+              '14'
+              '16'
+              '18'
+              '20'
+              '24'
+              '28'
+              '32'
+              '36'
+              '40'
+              '48'
+            )
+            OnChange = AxisChanged
+            TabOrder = 1
+            Text = '12'
+          end
+          object edAxisTitleText: TEdit
+            AnchorSideLeft.Control = Label9
+            AnchorSideLeft.Side = asrBottom
+            AnchorSideTop.Control = cbAxisTitleVisible
+            AnchorSideTop.Side = asrBottom
+            AnchorSideRight.Control = gbAxisTitle
+            AnchorSideRight.Side = asrBottom
+            Left = 54
+            Height = 23
+            Top = 29
+            Width = 214
+            Anchors = [akTop, akLeft, akRight]
+            BorderSpacing.Left = 21
+            BorderSpacing.Top = 6
+            BorderSpacing.Right = 12
+            OnChange = AxisChanged
+            TabOrder = 2
+            Text = 'edAxisTitleText'
+          end
+          object Label9: TLabel
+            AnchorSideLeft.Control = gbAxisTitle
+            AnchorSideTop.Control = edAxisTitleText
+            AnchorSideTop.Side = asrCenter
+            Left = 12
+            Height = 15
+            Top = 33
+            Width = 21
+            BorderSpacing.Left = 12
+            Caption = 'Text'
+            ParentColor = False
+          end
+          object clbAxisTitleFontColor: TColorButton
+            AnchorSideTop.Control = cmbAxisTitleFontName
+            AnchorSideTop.Side = asrCenter
+            AnchorSideRight.Control = edAxisTitleText
+            AnchorSideRight.Side = asrBottom
+            Left = 240
+            Height = 25
+            Top = 59
+            Width = 28
+            Anchors = [akTop, akLeft, akRight]
+            BorderWidth = 2
+            ButtonColorSize = 16
+            ButtonColor = clBlack
+            OnColorChanged = AxisChanged
+          end
+          object cbAxisTitleVisible: TCheckBox
+            AnchorSideLeft.Control = gbAxisTitle
+            AnchorSideTop.Control = gbAxisTitle
+            Left = 12
+            Height = 19
+            Top = 4
+            Width = 54
+            BorderSpacing.Left = 12
+            BorderSpacing.Top = 4
+            Caption = 'Visible'
+            Checked = True
+            OnChange = AxisChanged
+            State = cbChecked
+            TabOrder = 3
+          end
         end
       end
       object pgSeries: TTabSheet
@@ -1406,6 +1652,26 @@ object Form1: TForm1
           OnChange = cbShowAxesChange
           TabOrder = 1
         end
+        object btnSaveToBitmap: TButton
+          Left = 12
+          Height = 25
+          Top = 88
+          Width = 105
+          AutoSize = True
+          Caption = 'Save to bitmap'
+          OnClick = btnSaveToBitmapClick
+          TabOrder = 2
+        end
+        object btnCopyToClipboard: TButton
+          Left = 128
+          Height = 25
+          Top = 88
+          Width = 121
+          AutoSize = True
+          Caption = 'Copy to clipboard'
+          OnClick = btnCopyToClipboardClick
+          TabOrder = 3
+        end
       end
     end
   end
@@ -1472,7 +1738,11 @@ object Form1: TForm1
       'ColorS=F0FBFF'
       'ColorT=A4A0A0'
     )
-    left = 743
-    top = 365
+    left = 512
+    top = 328
+  end
+  object OpenDialog1: TOpenDialog
+    left = 512
+    top = 248
   end
 end
